webapp-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: webappimage:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
    - host: app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp-service
              servicePort: 8081
